<resources>
    <string name="app_name">Project 2</string>
    <string name="home_page">Home Page</string>
    <string name="profile_page">Profile</string>
    <string name="friend_page">Add Friend</string>

    <string name="welcome">Welcome to\nMood\nJournal</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Vestibulum bibendum dui ornare tellus finibus, vel tristique eros tincidunt.
        In laoreet ipsum a accumsan imperdiet.
        Praesent iaculis neque ligula, non tincidunt magna faucibus non.
    </string>
    <string name="close">Close</string>
    <string name="post">Post</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="home">Home</string>
    <string name="remove_friend">Unfollow</string>

    <string name="motivational">Your motivational quote:</string>
    <string name="mq1">It does not matter how slowly you go as long as you do not stop.</string>
    <string name="mq2">Quality is not an act, it is a habit.</string>
    <string name="mq3">Life is 10% what happens to you and 90% how you react to it.</string>
    <string name="mq4">It always seems impossible until it is done.</string>
    <string name="mq5">Good, better, best. Never let it rest. Til your good is better and your better is best.</string>
    <string name="mq6">With the new day comes new strength and new thoughts.</string>
    <string name="mq7">When something is important enough, you do it even if the odds are not in your favor.</string>
    <string name="mq8">Our greatest weakness lies in giving up. The most certain way to succeed is always to try just one more time.</string>
    <string name="mq9">Ever tried. Ever failed. No matter. Try again. Fail again. Fail better.</string>
    <string name="mq10">If you can dream it, you can do it.</string>
    <string name="account_settings">Account Settings</string>
    <string name="back">Back</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="change_username">Change Username</string>
    <string name="temp_username">Temp Username</string>
    <string name="mood_rating">Mood:</string>
    <string name="temp_text_here_ni_was_feeling_really_sad_nso_sad">Temp text here\nI was feeling really sad.\nSo sad.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="like">Like</string>
    <string name="likes_73">Likes: 73</string>
    <string name="comment">Comment</string>
    <string name="share_quote">Share Quote</string>
    <string name="share_graph">Share Graph</string>
</resources>