<?xml version="1.0" encoding="utf-8"?>

<!--Individual Post Display-->
<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    card_view:cardBackgroundColor="@color/primary_200"
    card_view:cardCornerRadius="10dp"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/post_username_display"
                android:text="@string/temp_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:layout_margin="15dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="10"/>

            <Button
                android:id="@+id/edit_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/edit" />

            <Button
                android:id="@+id/delete_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/delete" />

        </LinearLayout>

        <TextView
            android:id="@+id/post_mood_entry_display"
            android:text="@string/temp_text_here_ni_was_feeling_really_sad_nso_sad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/post_mood_rating_display"
            android:text="@string/mood_rating"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
